<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    tools:context="com.example.timerecording.EditDataActivity"
    android:paddingBottom="@dimen/ActivityVerticalPadding"
    android:paddingEnd="@dimen/ActivityHorizontalPadding"
    android:paddingTop="@dimen/ActivityVerticalPadding"
    android:paddingStart="@dimen/ActivityHorizontalPadding"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        android:id="@+id/CenterHelper"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/LabelStartTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/LabelStartTime"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/StartDateValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelStartTime"
        app:layout_constraintEnd_toStartOf="@+id/CenterHelper"
        android:inputType="date"
        android:layout_marginRight="@dimen/ColumnPadding"
        android:layout_marginTop="@dimen/RowPaddingTop"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/StartTimeValue"
        app:layout_constraintStart_toStartOf="@+id/CenterHelper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelStartTime"
        android:inputType="time"
        android:layout_marginTop="@dimen/RowPaddingTop"
        android:layout_marginLeft="@dimen/ColumnPadding"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/LabelEndTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/LabelEndTime"
        app:layout_constraintTop_toBottomOf="@+id/StartDateValue"
        android:layout_marginTop="@dimen/RowPaddingTop"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/EndDateValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelEndTime"
        app:layout_constraintEnd_toStartOf="@+id/CenterHelper"
        android:inputType="date"
        android:layout_marginRight="@dimen/ColumnPadding"
        android:layout_marginTop="@dimen/RowPaddingTop"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/EndTimeValue"
        app:layout_constraintStart_toStartOf="@+id/CenterHelper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelEndTime"
        android:inputType="time"
        android:layout_marginTop="@dimen/RowPaddingTop"
        android:layout_marginLeft="@dimen/ColumnPadding"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/LabelPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/LabelPause"
        app:layout_constraintTop_toBottomOf="@+id/EndDateValue"
        android:layout_marginTop="@dimen/RowPaddingTop"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/PauseValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelPause"
        android:inputType="number"
        android:layout_marginTop="@dimen/RowPaddingTop"
        android:ems="10"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/LabelComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/LabelComment"
        app:layout_constraintTop_toBottomOf="@+id/PauseValue"
        android:layout_marginTop="@dimen/RowPaddingTop"/>

    <EditText
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/CommentValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LabelComment"
        android:inputType="textMultiLine"
        android:layout_marginTop="@dimen/RowPaddingTop"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="top"/>

</android.support.constraint.ConstraintLayout>